--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <div class="navbar__login">
               <div class="login__signin"><a href="">Sign in</a></div>
               <div class="login__button"><a href="">Start Trial</a></div>
+				  <div class="test"></div>
             </div>
           </div>
         </div>
