--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
               <div class="menu__item"><a href="">Pricing</a></div>
             </div>
             <div class="navbar__login">
-              <div class="login__signin"><a href="">Sign in</a></div>
-              <div class="login__button"><a href="">Start Trial</a></div>
+              <a href=""><div class="login__signin">Sign in</div></a>
+              <a href=""><div class="login__button">Start Trial</div></a></div>
             </div>
           </div>
         </div>
