--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
               <a href=""><div class="login__button">Start Trial</div></a></div>
             </div>
           </div>
+			 <div class="header__background">
+				 <div class="wrapper">
+					<div class="background__card">
+						 <div class="card__title">
+							Be aware, <br>
+							Manage well.
+						 </div>
+						 <div class="card__content">
+							Everyone experiences stress in different ways. <br>
+							Let Alivio guide you, in a personalized journal <br> experience, to overcome your stress.
+						 </div>
+						 <a href=""><div class="card__button">Find Your Way</div></a>
+					 </div>
+				 </div>
+			 </div>
         </div>
       </div>
     </header>
