--- a/index.html
+++ b/index.html
@@ -27,18 +27,21 @@
             </div>
           </div>
 			 <div class="header__background">
-				 <div class="wrapper">
-					<div class="background__card">
-						 <div class="card__title">
-							Be aware, <br>
-							Manage well.
-						 </div>
-						 <div class="card__content">
-							Everyone experiences stress in different ways. <br>
-							Let Alivio guide you, in a personalized journal <br> experience, to overcome your stress.
-						 </div>
-						 <a href=""><div class="card__button">Find Your Way</div></a>
-					 </div>
+				<div class="background__img">
+					<img src="img/BG.png" alt="">
+				</div>
+				<div class="wrapper">
+				<div class="background__card">
+					<div class="card__title">
+						Be aware, <br>
+						Manage well.
+					</div>
+					<div class="card__content">
+						Everyone experiences stress in different ways. <br>
+						Let Alivio guide you, in a personalized journal <br> experience, to overcome your stress.
+					</div>
+					<a href=""><div class="card__button">Find Your Way</div></a>
+				</div>
 				 </div>
 			 </div>
         </div>
