--- a/index.html
+++ b/index.html
@@ -42,10 +42,23 @@
 					</div>
 					<a href=""><div class="card__button">Find Your Way</div></a>
 				</div>
-				 </div>
+				</div>
 			 </div>
         </div>
       </div>
     </header>
+	 <main class="main">
+		 <div class="wrapper">
+			<div class="main__content">
+				<div class="content__title">
+					<div class="title__upper">How it works</div>
+					<div class="title__bottom">Understand & Release 
+						the stress in 3 steps</div>
+				</div>
+				<div class="content__text">Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.</div>
+			</div>
+			<div class="cards__container"></div>
+		 </div>
+	 </main>
   </body>
 </html>
