--- a/index.html
+++ b/index.html
@@ -57,7 +57,51 @@
 				</div>
 				<div class="content__text">Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.</div>
 			</div>
-			<div class="cards__container"></div>
+			<div class="main__cards-container">
+				<div class="card__box">
+					<div class="box__title">
+						01
+						<div class="title__text perso">
+							Personalize
+						</div>
+					</div>
+					<div class="box__text">
+						Answer a quick survey about how you express yourself, what causes you stress, and what area would you like to work on. This way, we can fully personalize your journal!
+					</div>
+					<div class="box__img">
+						<img src="img/01img.png" alt="">
+					</div>
+				</div>
+				<div class="card__box">
+					<div class="box__title">
+						02
+						<div class="title__text write">
+							Write & Understand
+						</div>
+					</div>
+					<div class="box__text">
+						Write, draw, reflect, understand. Alivio will guide you through the prompts and will help you manage your stress!
+					</div>
+					<div class="box__img">
+						<img src="img/02img.png" alt="">
+					</div>
+				</div>
+				<div class="card__box">
+					<div class="box__title">
+						03
+						<div class="title__text alivio">
+							Alivio!
+						</div>
+					</div>
+					<div class="box__text">
+						Now you are aware, and have a way to manage and overcome your own stress.
+						What are you waiting for? Alivio today!
+					</div>
+					<div class="box__img">
+						<img src="img/03img.png" alt="">
+					</div>
+				</div>
+			</div>
 		 </div>
 	 </main>
   </body>
