main cards margin

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<div class="content__text">Alivio offers as many journals it takes, tackling different areas such as anxiety, overwhelmedness, sadness, or anger, and a variety of personal causes, to help you become aware of your emotions, and guide you in how to manage stress.</div>
 			</div>
 			<div class="main__cards-container">
-				<div class="card__box">
+				<div class="card__box box01">
 					<div class="box__title">
 						01
 						<div class="title__text perso">
@@ -72,7 +72,7 @@
 						<img src="img/01img.png" alt="">
 					</div>
 				</div>
-				<div class="card__box">
+				<div class="card__box box02">
 					<div class="box__title">
 						02
 						<div class="title__text write">
@@ -86,7 +86,7 @@
 						<img src="img/02img.png" alt="">
 					</div>
 				</div>
-				<div class="card__box">
+				<div class="card__box box03">
 					<div class="box__title">
 						03
 						<div class="title__text alivio">
