--- a/index.html
+++ b/index.html
@@ -102,7 +102,27 @@
 					</div>
 				</div>
 			</div>
-		 </div>
+		</div>
+		<div class="video__content">
+			<div class="wrapper w-video">
+				<div class="video__container">
+					<div class="video__title-box">
+						<div class="title-upper">
+							Let's hear about Kayla's success story
+						</div>
+						<div class="title-bottom">
+							See how well Alivio works in a real customer’s life. 
+						</div>
+						<div class="card__button video-card">
+							Lets get started
+						</div>
+					</div>
+					<div class="video-player">
+						<img src="img/Video.png" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
 	 </main>
   </body>
 </html>
