--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
 						<div class="title-bottom">
 							See how well Alivio works in a real customer’s life. 
 						</div>
-						<div class="card__button video-card">
+						<a href=""><div class="card__button video-card">
 							Lets get started
-						</div>
+						</div></a>
 					</div>
 					<div class="video-player">
-						<img src="img/Video.png" alt="">
+						<a href=""><img src="img/Video.png" alt=""></a>
 					</div>
 				</div>
 			</div>
