--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							Let's hear about Kayla's success story
 						</div>
 						<div class="title-bottom">
-							See how well Alivio works in a real customer’s life. 
+							See how well Alivio works in a real customer’s life.
 						</div>
 						<a href=""><div class="card__button video-card">
 							Lets get started
@@ -123,6 +123,37 @@
 				</div>
 			</div>
 		</div>
-	 </main>
+		<div class="wrapper">
+			<div class="main__our-product">
+				<div class="our-product__container">
+					<div class="product__photo"><img src="img/photobig.png" alt="">
+						<div class="photo__mini-card">
+							<div class="mini-card__title">Customized For</div>
+							<div class="mini-card__line"></div>
+							<div class="mini-card__photo">
+								<img src="img/photomini.png" alt="">
+							</div>
+							<div class="mini-card__name">Mikayla</div>
+							<div class="mini-card__title-bottom">Your custom contents</div>
+							<div class="mini-card__list">
+								<div class="li">
+									• Understand Your Stress <br>
+									• Anger Management
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="product__card">
+						<div class="title__upper">Our product</div>
+						<div class="title__bottom">You tell us your stress,
+						We make your diary</div>
+						<div class="box__text">Everyone experiences it, and in different ways.
+						Let Alivio guide you, in a personalized journal experience, to overcome your stress.</div>
+						<a href=""><div class="card__button">Find Your Way</div></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
   </body>
 </html>
