--- a/index.html
+++ b/index.html
@@ -155,5 +155,18 @@
 			</div>
 		</div>
 	</main>
+	<footer>
+		<div class="footer">
+			<div class="wrapper">
+				<div class="footer__menu">
+					<div class="footer-item item1"><a href="">Alivio</a></div>
+					<div class="footer-item"><a href="">Why Alivio</a></div>
+					<div class="footer-item"><a href="">Solutions</a></div>
+					<div class="footer-item"><a href="">Community</a></div>
+					<div class="footer-item"><a href="">Pricing</a></div>
+				</div>
+			</div>
+		</div>
+	</footer>
   </body>
 </html>
